--- a/src/components/Css/TitleWithVideo.css
+++ b/src/components/Css/TitleWithVideo.css
@@ -15,29 +15,6 @@
   z-index: -1;
 }
 
-.content {
-  position: absolute;
-  top: 20%;
-  left: 22%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-align: center;
-}
-
-.content2 {
-  position: absolute;
-  top: 55%;
-  left: 38%;
-  transform: translate(-50%, -50%);
-  color: white;
-  text-align: center;
-}
-
-h1 {
-  font-size: 3em;
-  font-weight: bold;
-}
-
 .capa {
   position: absolute;
   top: 0;
@@ -49,12 +26,35 @@ h1 {
   mix-blend-mode: overlay;
 }
 
+.content, .content2 {
+  position: absolute;
+  color: white;
+  text-align: center;
+}
+
+.content {
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.content2 {
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  font-size: 3em;
+  font-weight: bold;
+}
+
 .title-modern {
-  font-size: 150px; /* Muy grande */
+  font-size: 150px;
   font-weight: 900;
-  color: #ffffff; /* Blanco para contraste */
-  text-transform: uppercase; /* Todo en mayúsculas */
-  letter-spacing: 2px; /* Espaciado entre letras */
+  color: #ffffff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   text-align: center;
 }
 
@@ -69,7 +69,7 @@ h1 {
 
 .button-container {
   position: absolute;
-  bottom: 230px; /* Ajusta la distancia desde el borde inferior */
+  bottom: 230px;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
@@ -92,55 +92,53 @@ h1 {
 
 /* Media Queries para Responsividad */
 
-/* Pantallas pequeñas (teléfonos móviles) */
-@media (max-width: 600px) {
+/* Pantallas grandes (escritorios grandes) */
+@media (min-width: 1200px) {
   .title-modern {
-    font-size: 60px; /* Reduce el tamaño de la fuente */
+    font-size: 130px;
   }
 
   .title-modern2 {
-    font-size: 30px; /* Ajuste del subtítulo */
+    font-size: 60px;
   }
 
   .content {
-    top: 25%; /* Ajusta la posición en pantallas pequeñas */
-    left: 50%;
+    top: 10%;
+    left: 25%;
   }
-
+  
+  
   .content2 {
-    top: 60%;
-    left: 50%;
+    top: 30%;
+    left: 35%;
   }
 
   .button-container {
-    bottom: 100px; /* Ajusta el botón más arriba en pantallas pequeñas */
-  }
-
-  .cta-button {
-    padding: 8px 16px;
-    font-size: 1rem; /* Reduce el tamaño del botón */
+    bottom: 180px;
   }
 }
 
 /* Pantallas medianas (tabletas) */
 @media (max-width: 900px) {
   .title-modern {
-    font-size: 90px; /* Ajusta el tamaño de la fuente para tabletas */
+    font-size: 90px;
   }
 
   .title-modern2 {
-    font-size: 35px; /* Ajuste del subtítulo */
+    font-size: 35px;
   }
 
   .content {
-    top: 20%; /* Ajusta la posición */
-    left: 50%;
+    top: 10%;
+    left: 25%;
+  }
+  
+  
+  .content2 {
+    top: 30%;
+    left: 35%;
   }
 
-  .content2 {
-    top: 55%;
-    left: 50%;
-  }
 
   .button-container {
     bottom: 150px;
@@ -149,5 +147,30 @@ h1 {
   .cta-button {
     padding: 10px 20px;
     font-size: 1.1rem;
+  }
+}
+
+/* Pantallas pequeñas (teléfonos móviles) */
+@media (max-width: 600px) {
+  .title-modern {
+    font-size: 60px;
+  }
+
+  .title-modern2 {
+    font-size: 30px;
+  }
+
+  .content, .content2 {
+    top: 25%;
+    left: 50%;
+  }
+
+  .button-container {
+    bottom: 100px;
+  }
+
+  .cta-button {
+    padding: 8px 16px;
+    font-size: 1rem;
   }
 }
