--- a/src/components/Css/Footer.css
+++ b/src/components/Css/Footer.css
@@ -1,53 +1,61 @@
 .site-footer {
-    background-color: #b39133; /* Fondo negro */
-    color: #fff; /* Texto blanco */
-    padding: 50px 0;
-    font-family: Arial, sans-serif;
-  }
-  
+  background-color: #b39133;
+  color: #fff;
+  padding: 20px 0; /* Reducimos padding en móviles */
+  font-family: Arial, sans-serif;
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column; /* Cambia a columna en móviles */
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px; /* Reducimos el padding para dispositivos móviles */
+}
+
+.footer-logo img {
+  max-width: 100px; /* Ajuste de tamaño para móviles */
+}
+
+.footer-links ul,
+.footer-social ul {
+  display: flex;
+  flex-direction: column; /* Cambia la dirección del flex a columna en móviles */
+  padding: 0;
+  margin: 10px 0;
+}
+
+.footer-links ul li,
+.footer-social ul li {
+  margin-right: 0; /* Ajustamos márgenes en móviles */
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+/* Media queries para pantallas pequeñas */
+@media (max-width: 768px) {
   .footer-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+    flex-direction: column;
   }
-  
+
   .footer-logo img {
-    max-width: 150px; /* Ajusta el tamaño del logo */
+    max-width: 80px;
   }
-  
+
   .footer-links ul,
   .footer-social ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  
-  .footer-links ul li,
-  .footer-social ul li {
-    margin-right: 20px;
-  }
-  
+
   .footer-links ul li a,
   .footer-social ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
-  }
-  
-  .footer-links ul li a:hover,
-  .footer-social ul li a:hover {
-    color: #f2a900; /* Color amarillo similar al de USNA Golf */
-  }
-  
-  .footer-bottom {
-    text-align: center;
-    margin-top: 20px;
     font-size: 12px;
-    border-top: 1px solid #444; /* Línea divisoria en la parte superior */
-    padding-top: 10px;
   }
-  
+
+  .footer-bottom {
+    font-size: 10px;
+  }
+}
